--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -7,6 +7,8 @@ COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app.py /app/
+COPY templates /app/templates
+COPY static /app/static
 
 EXPOSE 5000
 
