--- a/k8s/service.flask.yml
+++ b/k8s/service.flask.yml
@@ -8,7 +8,7 @@ spec:
     app: flask-app
   ports:
     - name: http
-      port: 80 # The service's port
-      targetPort: 5000 # The container port
-      nodePort: 30080 # For NodePort
+      port: 80
+      targetPort: 5000
+      nodePort: 30502
   type: NodePort
