--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -13,4 +13,4 @@ COPY data /app/data/
 ENV DATASET_PATH=/app/data/2023_spotify_ds1.csv
 ENV MODEL_PATH=/app/data/model.pkl
 
-CMD ["python", "fpgrowth_script.py"]
+CMD ["python", "generate_rules.py"]
