--- a/k8s/deployment-flask.yml
+++ b/k8s/deployment-flask.yml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: flask-container
           image: jeanevangelista/flask:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000
           env:
